[project]
name = "langgraph-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.0.2",
    "langgraph>=1.0.2",
    "langsmith==0.4.39rc1",
    "nltk>=3.9.2",
    "python-dotenv>=1.2.1",
    "schedule>=1.2.2",
]
